--- a/src/app/shared/components/layout/layout.component.css
+++ b/src/app/shared/components/layout/layout.component.css
@@ -1,3 +1,10 @@
+body,
+html {
+  margin: 0;
+  padding: 0;
+  font-family: 'Outfit', sans-serif;
+}
+
 .sidenav-container {
   position: fixed;
   top: 64px;
@@ -6,17 +13,35 @@
   bottom: 0;
   height: calc(100vh - 64px);
   display: flex;
+  background: linear-gradient(-45deg, #29335C, #1a2038, #669BBC, #29335C);
+  background-size: 400% 400%;
+  animation: gradientBG 15s ease infinite;
+}
+
+@keyframes gradientBG {
+  0% {
+    background-position: 0% 50%;
+  }
+
+  50% {
+    background-position: 100% 50%;
+  }
+
+  100% {
+    background-position: 0% 50%;
+  }
 }
 
 .sidenav {
   width: 250px;
   border-right: none;
+  background: transparent !important;
 }
 
 .main-content {
   flex-grow: 1;
   overflow-y: auto;
   padding: 24px;
-  background-color: #f5f5f5;
+  background-color: transparent;
   height: 100%;
 }
