--- a/src/app/shared/components/sidebar/sidebar.component.html
+++ b/src/app/shared/components/sidebar/sidebar.component.html
@@ -1,12 +1,7 @@
 <div class="sidebar">
   <mat-nav-list>
-    <a
-      mat-list-item
-      *ngFor="let item of navItems"
-      [routerLink]="item.route"
-      routerLinkActive="active-link"
-      class="nav-link"
-    >
+    <a mat-list-item *ngFor="let item of navItems" [routerLink]="item.route" routerLinkActive="active-link"
+      class="nav-link">
       <mat-icon matListItemIcon>{{ item.icon }}</mat-icon>
       <span matListItemTitle>{{ item.label }}</span>
     </a>
