--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -4,7 +4,7 @@
       <button mat-icon-button class="menu-button" (click)="onMenuToggle()" *ngIf="isMobile">
         <mat-icon>menu</mat-icon>
       </button>
-      <img src="assets/images/Kaar_Logo.png" alt="KaarTech Logo" class="logo-image" />
+      <!-- <img src="assets/images/Kaar_Logo.png" alt="KaarTech Logo" class="logo-image" /> -->
       <span class="logo-text">KaarTech</span>
     </div>
     <div class="user-section">
